--- a/web/resources/styles/gradebooktable.scss
+++ b/web/resources/styles/gradebooktable.scss
@@ -4,7 +4,7 @@ td, th {
   width: 100px;
 }
 
-#gradeBookGutterLabels {
+#gutterLabels {
   font-size: 10px;
   font-weight: bold;
   border-right: 1px solid #f4e0e0;
@@ -58,11 +58,11 @@ td {
   display: none;
 }
 
-#gradeBookEntries {
+#gradebookEntries {
   clear: both;
 }
 
-.gradeBookStudent {
+.gradebookStudent {
   height: 28px;
 }
 
