--- a/web/templates/gradebook/gradingScale.html
+++ b/web/templates/gradebook/gradingScale.html
@@ -1,6 +1,5 @@
 <!-- Grading Scale Modal Window -->
-<div id="gradingScaleSelect" ng-show="showGradingScale"
-     ng-init="showGradingScale = false">
+<div id="gradingScaleSelect">
   <div class="arrow-up"></div>
   <!-- grading category -->
   <div class="category" ng-repeat="category in gradingScale.categories">
