--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -76,7 +76,7 @@
       <gsc ng-show="showGradingScale" ng-init="showGradingScale = false"></gsc>
       
       <!-- table -->
-      <gradebook></gradebook>
+      <div gradebook></div>
 
     </div>
   </article>
