Classroom: added underscore.js to template

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -10,6 +10,7 @@
 <script src="/static/scripts/flot/jquery.flot.min.js"></script>
 <script src="/static/scripts/flot/jquery.flot.resize.min.js"></script>
 <script type="text/javascript" src="/static/scripts/angular.min.js"></script>
+<script type="text/javascript" src="/static/scripts/underscore-min.js"></script>
 
 <script type="text/javascript" src="/static/scripts/m2m.js"></script>
 <script type="text/javascript" src="/static/scripts/gradebook/app.js"></script>
