Classroom: added event categories to gradebook

--- a/web/resources/styles/gradebooktable.scss
+++ b/web/resources/styles/gradebooktable.scss
@@ -40,6 +40,8 @@ td {
   font-weight: bold;
   text-align: center;
   cursor: text;
+  border: none;
+  background: none;
 }
 
 .eventPossiblePoints {
