Classroom: gradebook now display/updates event categories

--- a/web/templates/gradebook/gradebook.html
+++ b/web/templates/gradebook/gradebook.html
@@ -14,9 +14,8 @@
         {{event.title}}
       </div>
       <input class="eventCategory" contentEditable="True" ng-model="event.category"
-             ng-value="{{event.category}}" ng-change="updateEventCategory({[event.id}})">
-      </input>
-      
+             ng-value="{{event.category}}" ng-change="updateEventCategory(event.id)">
+      </input><br>
     </th>
   </thead>
 </table>
