Classroom: changes to possible points now update the database

--- a/web/templates/gradebook/gradebook.html
+++ b/web/templates/gradebook/gradebook.html
@@ -20,5 +20,9 @@
              ng-change="updatePossiblePoints(event.id)"></input>
       <input class="eventWeight" ng-model="event.weight" disabled="true"></input>
     </th>
+    <!-- a row for each student -->
+    <tr ng-reapeat="student in gradebook" class="">
+
+    </tr>
   </thead>
 </table>
