--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -63,6 +63,11 @@
           <img style="margin-top: 6px" src="/resources/images/icons/clipboard.png">
           Grading Scale
         </span>
+        <span class="gradebookTool" ng-click="toggleWeights()">
+          <img src="/resources/images/icons/scale.png">
+          Assign Weights
+        </span>
+
         <!--
         <span class="gradebookTool" ng-click="isolateStudent = true"
               ng-show="isolateStudent = false">
