Classroom: added front end support for submitting the weight controller

--- a/web/templates/gradebook/weights.html
+++ b/web/templates/gradebook/weights.html
@@ -19,7 +19,8 @@
       cancel
     </a>
     <a class="submitWidget" style="right: 0;" ng-class="{disabled: canSubmitWidget == false}"
-       ng-disabled="canSubmitWidget" ng-init="canSubmitWidget = true">
+       ng-init="canSubmitWidget = true" ng-click="updateWeights()"
+       >
       submit
     </a>
   </div>
