Classroom: gradebook now correctly assigns weights

--- a/web/templates/gradebook/weights.html
+++ b/web/templates/gradebook/weights.html
@@ -14,6 +14,7 @@
       <input size="1" ng-model="newPercentage" ng-blur="addCategory()"> %
     </div>
   </div>
+  <!-- weight control controls -->
   <div id="weightsButtons">
     <a ng-click="toggleWeightControl()" class="closeWidget">
       cancel
