Classroom: styled grading scale control

--- a/web/templates/gradebook/gradingScale.html
+++ b/web/templates/gradebook/gradingScale.html
@@ -16,7 +16,7 @@
            ng-model="category.value">
     <span class="addGradingScaleCategory"
           ng-click="addGradingScaleCategory(category.lower)">
-      +
+      <img src="/resources/images/gradeBook/plus.png"/>
     </span>
   </div>
   <!-- modal control buttons -->
