--- a/web/resources/styles/gradebook.scss
+++ b/web/resources/styles/gradebook.scss
@@ -267,16 +267,16 @@ input {
   text-transform: uppercase;
 }
 
-.categorySelectAddRow {
+.addGradingScaleCategory {
   float: right;
   width: 30px;
-  height: 100%;
+  height: 24px;
   line-height: 24px;
   cursor: pointer;
   background: #F2F0E0;
 }
 
-.categorySelectDeleteRow {
+.deleteGradingScaleCategory {
   float: left;
   width: 30px;
   text-align: center;
