--- a/web/templates/gradebook/gradingScale.html
+++ b/web/templates/gradebook/gradingScale.html
@@ -3,10 +3,13 @@
   <div class="arrow-up"></div>
   <!-- grading category -->
   <div class="category" ng-repeat="category in gradingScale.categories">
+    <!-- control to delete categories -->
     <span class="deleteGradingScaleCategory"
-          ng-click="deleteGradingScaleCategory(category.lower)">
+          ng-click="deleteGradingScaleCategory(category.lower)" ng-hide="$last">
       x
     </span>
+    <!-- hide for the last one -->
+    <span class="deleteGradingScaleCategory" ng-show="$last">&nbsp;</span>
     <input class="categoryInput categoryLower" type="text" ng-model="category.lower"
            ng-change="updateUppers()"  ng-disabled="$last" ng-value="{{category.lower}}">
     <input class="categoryInput categoryUpper" type="text" ng-change="updateLowers()"
@@ -14,9 +17,12 @@
     <img src="/resources/images/gradeBook/rightArrow.png">
     <input class="categoryInput categoryValue" type="text" ng-value="{{category.value}}"
            ng-model="category.value">
-    <span class="addGradingScaleCategory"
-          ng-click="addGradingScaleCategory(category.lower)">
+    <span class="addGradingScaleCategory" ng-hide="$first"
+          ng-click="addGradingScaleCategory(category.upper)">
       <img src="/resources/images/gradeBook/plus.png"/>
+    </span>
+    <span class="addGradingScaleCategory" ng-show="$first">
+      &nbsp;
     </span>
   </div>
   <!-- modal control buttons -->
