Classroom: gradebook can now remove event weights

--- a/web/resources/styles/gradebook.scss
+++ b/web/resources/styles/gradebook.scss
@@ -284,6 +284,14 @@ input {
   cursor: pointer;
 }
 
+.removeWeightCategory {
+  float: left;
+  width: 30px;
+  text-align: center;
+  cursor: pointer;
+  margin-right: -30px;
+}
+
 #gradingScaleHeaders {
   font-size: 14px;
   width: 100%;
