--- a/web/templates/gradebook/gradingScale.html
+++ b/web/templates/gradebook/gradingScale.html
@@ -30,6 +30,6 @@
     <li class="closeWidget" id="closeGradingScaleSelect" ng-click="showGradingScale = false">
       close
     </li>
-    <li class="submitWidget" ng-click="applyScale()">apply</li>
+    <li class="submitWidget" ng-click="applyGradingScale()">apply</li>
   </ul>
 </div>
