Classroom: weights now get properly calculated on the client and server

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -82,10 +82,10 @@
       </span>
       
       <!-- controls -->
-      <gsc ng-show="showGradingScale" ng-init="showGradingScale = false"></gsc>
-      <wc ng-show="displayWeightControl" ng-init="displayWeightControl = false"></wc>
+      <div gsc ng-show="showGradingScale" ng-init="showGradingScale = false"></div>
+      <div wc ng-show="displayWeightControl" ng-init="displayWeightControl = false"></div>
       
-      <!-- table -->
+      <!-- gradebook table -->
       <div gradebook></div>
 
     </div>
