Classroom: moved gradebook directive to separate file

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -14,6 +14,9 @@
 <script type="text/javascript" src="/static/scripts/underscore-min.js"></script>
 
 <script type="text/javascript" src="/static/scripts/m2m.js"></script>
+
+<script type="text/javascript"
+        src="/static/scripts/gradebook/directives/gradebook.js"></script>
 <script type="text/javascript" src="/static/scripts/gradebook/app.js"></script>
 
 <script type="text/javascript">
