--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -17,6 +17,8 @@
 
 <script type="text/javascript"
         src="/static/scripts/gradebook/directives/gradebook.js"></script>
+<script type="text/javascript"
+        src="/static/scripts/gradebook/directives/gsc.js"></script>
 <script type="text/javascript" src="/static/scripts/gradebook/app.js"></script>
 
 <script type="text/javascript">
