Classroom: moved weight control directive to its own file

--- a/web/templates/gradebook/home.html
+++ b/web/templates/gradebook/home.html
@@ -19,6 +19,8 @@
         src="/static/scripts/gradebook/directives/gradebook.js"></script>
 <script type="text/javascript"
         src="/static/scripts/gradebook/directives/gsc.js"></script>
+<script type="text/javascript"
+        src="/static/scripts/gradebook/directives/wc.js"></script>
 <script type="text/javascript" src="/static/scripts/gradebook/app.js"></script>
 
 <script type="text/javascript">
