--- a/web/resources/styles/gradebook.scss
+++ b/web/resources/styles/gradebook.scss
@@ -98,13 +98,14 @@ input {
 }
 
 #statsList {
-  background: #ffffff;
   font-size: 12px;
   font-weight: medium;
   text-shadow: none;
   display: inline-block;
-  border: 1px solid  #BEBEBE;
-  border-bottom: none;
+  float: right;
+  position: absolute;
+  top: 130px;
+  right: 275px;
   a {
     color: inherit;
     text-decoration: none;
@@ -117,6 +118,7 @@ input {
 
 .statChoice {
   padding-left: 5px;
+  background: white;
   border-bottom: 1px solid  #BEBEBE;
   color: black;
 }
