Classroom: gradebook's histogram widget now works

--- a/web/resources/styles/gradebooktable.scss
+++ b/web/resources/styles/gradebooktable.scss
@@ -82,6 +82,17 @@ td {
   height: 28px;
 }
 
+#utilityView {
+  margin: 25px;
+  margin-top: 10px;
+  float: left;
+}
+
+#figure {
+  width: 600px;
+  height: 400px;
+}
+
 .studentName {
   padding: 5px;
   border-right: 1px solid #f4e0e0;
